--- a/test.html
+++ b/test.html
@@ -11,6 +11,8 @@
     <canvas id="blockwildCanvas" width="256" height="256"></canvas>
     <h3>wildegraph</h3>
     <canvas id="wildegraphCanvas" width="256" height="256"></canvas>
+    <h3>zigzag</h3>
+    <canvas id="zigzagCanvas" width="256" height="256"></canvas>
     <script src="./test.build.js"></script>      
   </body>
 </html>
