--- a/test.html
+++ b/test.html
@@ -13,6 +13,8 @@
     <canvas id="wildegraphCanvas" width="256" height="256"></canvas>
     <h3>zigzag</h3>
     <canvas id="zigzagCanvas" width="256" height="256"></canvas>
+    <h3>hexpride</h3>
+    <canvas id="hexprideCanvas" width="256" height="256"></canvas>
     <script src="./test.build.js"></script>      
   </body>
 </html>
