--- a/test.html
+++ b/test.html
@@ -15,6 +15,8 @@
     <canvas id="zigzagCanvas" width="256" height="256"></canvas>
     <h3>hexpride</h3>
     <canvas id="hexprideCanvas" width="256" height="256"></canvas>
+    <h3>sosquare</h3>
+    <canvas id="sosquareCanvas" width="256" height="256"></canvas>
     <script src="./test.build.js"></script>      
   </body>
 </html>
